# wiggle-finder

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/wiggle_finder/: __init__.py  main.py
src/wiggle_finder/analyzers/: multi_exchange_analyzer.py
src/wiggle_finder/core/: config.py
src/wiggle_finder/exchanges/: base_exchange.py  binance_exchange.py  coinbase_exchange.py  exchange_factory.py
src/wiggle_finder/schedulers/: task_scheduler.py
src/wiggle_finder/services/: discovery_service.py  wiggle_api_client.py
