[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiggle-finder"
version = "0.1.0"
description = "Opportunity discovery and analysis service for the Wiggle multi-exchange arbitrage system"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Wiggle Team", email = "team@wiggle.dev"},
]
keywords = ["arbitrage", "crypto", "defi", "trading", "discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Shared wiggle components
    "wiggle-common",
    
    # HTTP clients for exchange APIs
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    
    # Data processing and analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Background task processing
    "celery>=5.3.0",
    "redis>=5.0.0",
    
    # API clients for exchanges
    "ccxt>=4.1.0",  # Cryptocurrency exchange library
    
    # Database clients
    "httpx>=0.25.0",  # For wiggle-service API calls
    
    # Async utilities
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.2.0",  # Retry logic
    
    # Scheduling and timing
    "schedule>=1.2.0",
    "python-crontab>=3.0.0",
    
    # Configuration and logging
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.2.0",
    
    # Math and statistics
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",  # For ML-based opportunity scoring
    
    # Time series analysis
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",  # For testing API calls
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",  # Mock HTTP responses
]

monitoring = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "prometheus-client>=0.19.0",
]

# Exchange-specific optional dependencies
exchanges = [
    "web3>=6.11.0",  # Ethereum Web3
    "python-binance>=1.0.0",  # Binance API
]

[project.urls]
Homepage = "https://github.com/wiggle/wiggle-finder"
Documentation = "https://docs.wiggle.dev/finder"
Repository = "https://github.com/wiggle/wiggle-finder"
Issues = "https://github.com/wiggle/wiggle-finder/issues"

[project.scripts]
wiggle-finder = "wiggle_finder.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/wiggle_finder"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["wiggle_finder", "wiggle_common"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["ccxt.*", "pandas.*", "numpy.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=wiggle_finder",
    "--cov-branch",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests requiring external APIs",
    "exchange: Tests requiring live exchange connections",
]
asyncio_mode = "auto"